--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://dict.aihub2022.top"
+baseURL: "https://ai-words.aihub2022.top"
 # languageCode: 'en-us'
 title: '从零开始学AI | Learn AI from scratch'
 defaultContentLanguage: 'en'
@@ -8,14 +8,14 @@ languages:
     # languageCode: ""
     # languageDirection: ""
     languageName: "中文"
-    title: "词典 | 从零开始学AI"
+    title: "AI 单词 | 从零开始学AI"
     weight: 1
   en:
     disabled: false
     # languageCode: ""
     # languageDirection: ""
     languageName: "English"
-    title: "Dict | Learn AI from scratch"
+    title: "AI Words | Learn AI from scratch"
     weight: 2
 # theme: "dictionary"
 theme: 'hugo-theme-stack'
@@ -40,8 +40,8 @@ menus:
     - name: AI 博客
       url: https://blog.aihub2022.top/
       weight: 3
-    - name: AI 词典
-      url: https://dict.aihub2022.top/
+    - name: AI Words
+      url: https://ai-words.aihub2022.top/
       weight: 4
     - name: OpenAI 中文文档
       url: https://openai-doc.aihub2022.top/
