--- a/hugo.yaml
+++ b/hugo.yaml
@@ -40,7 +40,7 @@ menus:
     - name: AI 博客
       url: https://blog.aihub2022.top/
       weight: 3
-    - name: AI Words
+    - name: AI words
       url: https://ai-words.aihub2022.top/
       weight: 4
     - name: OpenAI 中文文档
