--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,7 @@
 baseURL: "https://ai-words.aihub2022.top"
 # languageCode: 'en-us'
 title: '从零开始学AI | Learn AI from scratch'
-defaultContentLanguage: 'en'
+defaultContentLanguage: 'zh'
 languages:
   zh:
     disabled: false
@@ -19,6 +19,7 @@ languages:
     weight: 2
 # theme: "dictionary"
 theme: 'hugo-theme-stack'
+paginate: 20
 
 menus:
   social:
