--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,7 @@
 baseURL: "https://ai-words.aihub2022.top"
 # languageCode: 'en-us'
 title: '从零开始学AI | Learn AI from scratch'
-defaultContentLanguage: 'zh'
+defaultContentLanguage: 'en'
 languages:
   zh:
     disabled: false
