--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 baseURL: "https://ai-words.aihub2022.top"
 # languageCode: 'en-us'
-title: '从零开始学AI | Learn AI from scratch'
+title: '从零开始学AI - Learn AI from scratch'
 defaultContentLanguage: 'en'
 languages:
   zh:
@@ -8,14 +8,14 @@ languages:
     # languageCode: ""
     # languageDirection: ""
     languageName: "中文"
-    title: "AI 单词 | 从零开始学AI"
+    title: "AI 单词 - 从零开始学AI"
     weight: 1
   en:
     disabled: false
     # languageCode: ""
     # languageDirection: ""
     languageName: "English"
-    title: "AI words | Learn AI from scratch"
+    title: "AI words - Learn AI from scratch"
     weight: 2
 # theme: "dictionary"
 theme: 'hugo-theme-stack'
@@ -56,7 +56,7 @@ params:
   sidebar:
       compact: true
       # emoji: 🍥
-      # subtitle: Learn AI from scratch
+      subtitle: Follow me, AI with you.
       avatar:
           enabled: true
           local: true
